[package]
name = "geocoder"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Souza <arfs.antonio@gmail.com>"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"


[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
