[package]
name = "geocoder"
version = "0.1.2"
edition = "2021"
authors = ["Antonio Souza <arfs.antonio@gmail.com>"]
description = "A Rust crate that provides an easy way to use the Google Geocoding API."
license = "MIT"
repository = "https://github.com/arferreira/geocoder"
documentation = "https://docs.rs/geocoder"
keywords = ["geocoding", "google-maps", "rust"]
categories = ["api-bindings", "web-programming"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = {version = "0.12.5", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"


[dev-dependencies]
tokio = { version = "1.28", features = ["full"] }
rustfmt = "0.10.0"
clippy = "0.0.302"
